--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/brave/brave-webiste",
   "dependencies": {
-    "babel": "^5.8.23",
-    "hapi": "^10.0.0",
+    "babel-cli": "^6.1.2",
+    "hapi": "^11.1.0",
     "hapi-async-handler": "^1.0.3",
     "inert": "^3.0.1"
   },
