--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "node": "^5.0.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat-util": "^0.5.4",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "hapi-assets": "^0.3.0",
     "standard": "^5.3.1"
   },
   "standard": {
