--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "./node_modules/.bin/babel-node server.js",
-    "lint": "standard"
+    "lint": "standard",
+    "postinstall": "./node_modules/.bin/gulp"
   },
   "repository": {
     "type": "git",
