--- a/package.json
+++ b/package.json
@@ -23,12 +23,7 @@
     "fastly": "^1.2.1",
     "hapi": "^11.1.0",
     "hapi-async-handler": "^1.0.3",
-    "inert": "^3.0.1"
-  },
-  "engines": {
-    "node": "^5.0.0"
-  },
-  "devDependencies": {
+    "inert": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-concat-util": "^0.5.4",
     "gulp-minify-css": "^1.2.3",
@@ -36,6 +31,9 @@
     "gulp-uglifyjs": "^0.6.2",
     "hapi-assets": "^0.3.0",
     "standard": "^5.3.1"
+  },
+  "engines": {
+    "node": "^5.0.0"
   },
   "standard": {
     "ignore": [
