--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/babel-node server.js",
     "lint": "standard",
+    "build": "staticjinja build --srcpath=./public/templates --outpath=./public",
     "postinstall": "./node_modules/.bin/gulp"
   },
   "repository": {
