--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglifyjs": "^0.6.2",
     "hapi-assets": "^0.3.0",
-    "standard": "^5.3.1"
+    "standard": "^5.3.1",
+    "mailchimp-api": "^2.0.7"
   },
   "engines": {
     "node": "^5.0.0"
